chg:file configuration added